[gd_scene load_steps=11 format=2]

[ext_resource path="res://res/fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://res/fonts/OpenSans-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/menus/ScoreScreen.gd" type="Script" id=3]
[ext_resource path="res://src/tools/Fade.tscn" type="PackedScene" id=4]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.471795, 1 )
colors = PoolColorArray( 0.490196, 0.309804, 0.309804, 1, 0.273438, 0.0801086, 0.0801086, 1, 0.490196, 0.309804, 0.309804, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1024

[sub_resource type="DynamicFont" id=3]
size = 60
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
Button/colors/font_color = Color( 0.592157, 0.592157, 0.592157, 1 )
Button/colors/font_color_hover = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="ScoreScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1, 600 )
z_index = -5
texture = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginTop" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 1024.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 3 )
text = "Score"
align = 1

[node name="ScoreSpacer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 116.0
margin_right = 1024.0
margin_bottom = 387.0
size_flags_vertical = 3

[node name="ScoreText" type="Label" parent="VBoxContainer/ScoreSpacer"]
margin_left = 303.0
margin_top = 89.0
margin_right = 721.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 6 )
text = "Pellets Eaten: X * 100 = X000
Total Score: 0"

[node name="Timer" type="Timer" parent="VBoxContainer/ScoreSpacer/ScoreText"]
one_shot = true
autostart = true

[node name="MarginAboveButton" type="MarginContainer" parent="VBoxContainer"]
margin_top = 391.0
margin_right = 1024.0
margin_bottom = 491.0
rect_min_size = Vector2( 0, 100 )

[node name="ButtonSpacer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 495.0
margin_right = 1024.0
margin_bottom = 546.0

[node name="Button" type="Button" parent="VBoxContainer/ButtonSpacer"]
margin_left = 438.0
margin_right = 586.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "Continue"
flat = true

[node name="MarginBottom" type="MarginContainer" parent="VBoxContainer"]
margin_top = 550.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 50 )

[node name="Fade" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="VBoxContainer/ButtonSpacer/Button" to="." method="_on_Button_pressed"]
[connection signal="finished" from="Fade" to="." method="_on_Fade_finished"]
